fixed incorrect selector for header class, corrected padding and spacing, added background colour to footer class

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -41,9 +41,10 @@ input {
   list-style-type: none;
 }
 
-header {
+.header {
   display: flex;
   justify-content: space-between;
+  padding-top: 10px;
 }
 
 .content {
@@ -55,6 +56,8 @@ header {
 .footer {
   display: flex;
   justify-content: space-between;
+  background-color: #eeeeee;
+  align-items: flex-end;
 }
 
 a {
